Fri Apr 12 23:36:01 1996  Richard Basch  <basch@lehman.com>

	* forward.c (rd_and_store_for_creds): Consistency with the
	krlogind forwarded credentials cache naming scheme - krb5cc_p<pid>

Thu Apr 11 21:45:21 1996  Richard Basch  <basch@lehman.com>

	* forward.c (rd_and_store_for_creds): If we are going to use a
	ttyname based credentials file, at least compute it in a saner
	fashion (strip the /dev/ and translate remaining /'s into _, so
	the cache name looks like krb5cc_pts_4 instead of krb5cc_4).

	* kerberos5.c (kerberos5_cleanup): Cleanup the credentials cache
	that we may have created and destroy the context.

Mon Mar 18 20:56:37 1996  Theodore Y. Ts'o  <tytso@dcl>

	* kerberos5.c (kerberos5_send): Send in as input the
		authentication type pair (ap->type, ap->way) to be
		checksumed in the authenticator.
		(kerberos5_is): If the checksum is present in the
		authenticator, then validate the authentication type pair
		against the checksum.
		(kerberos5_reply): If we didn't do mutual authentication,
		and we receive a KRB_ACCEPT, then stash away the session
		key anyway.  This way we have a chance of doing encryption
		even if mutual authentication wasn't done.

	* encrypt.c (EncryptStartInput, EncryptStartOutput): Added
		conditional around printf so that these two functions can
		be called by the server.
		(encrypt_is_encrypting): New function which returns true
		only if both sides of the telnet stream is encrypted.

Fri Mar 15 18:19:44 1996  Theodore Y. Ts'o  <tytso@dcl>

	* auth.c: Added new authentication scheme for Krb5 mutual
		authentication with mandatory encryption.
		(auth_send, auth_send_retry): Split auth_send() so that
		the functionality done by auth_send_retry() is separate.
		This avoids a really dodgy pointer comparison which was
		caused by auth_send() being used for two purposes.  
		If the client has not requested encryption, then don't
		use the authentication systems which require encryption.